# patterns_search

./: 1_correlation_function_search.ipynb  README.md  pyproject.toml
patterns_search/: augmentations.py  searchers.py  types.py  utils.py
