[tool.poetry]
name = "patterns_search"
version = "0.1.0"
description = "Application for searching patterns in time series data"
authors = ["Vladimir Shitov <vladimirshitov98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lasio = "^0.28"
matplotlib = "^3.3.2"
numpy = "^1.19.2"
pandas = "^1.1.3"
seaborn = "^0.11.0"
scipy = "^1.5.3"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
